ul-forge/crates/ul-core/tests/snapshots/snapshot_tests__gir_process.snap
---
source: crates/ul-core/tests/snapshot_tests.rs
expression: gir
---
{
  "ul_gir": "0.1.0",
  "root": "n1",
  "nodes": [
    {
      "id": "n1",
      "type": "curve",
      "sort": "relation",
      "curvature": 0.5
    }
  ],
  "edges": []
}
